2.0.5
Issue #1668 Run-AlValidation fails if app filename has a comma (and there is only one app)
Issue #1675 Convert-BcAppsToRuntimePackages doesn't work with only one app.
Issue #1678 Setup-BcContainerTestUsers fails on version 18
Issue #1682 add silent mode to import module

2.0.4
Remove-BcEnvironment fails after waiting for environment removal
Import-TestToolkitToBcContainer fails when installing apps in online environment unless a container called bcserver exists
Add parameter -replacePackageId to Replace-DependenciesInAppFile to allow process to change package id in an app
Add parameter -replacePackageId to Publish-BcContainerApp to allow process to change package id in an app
Run-AlPipeline using a BcSaaS Sandbox environment to use replacePackageId when publishing previousApps and add delay to avoid conflicts
New-BcEnvironment to wait for other environments being created before creating
Specifying TestRunnerOnly installs all tests when not using online SaaS environments
Add parameter applicationInsightsKey to Run-AlPipeline to stamp applicationInsightsKey into app.json for all apps

2.0.3
Issue #1655 variable $scopes not set
Issue #1654 and #1656 Publish-BcContainerApp where the filename contains a comma fails.
New Function Get-BcInstalledExtensions to return installed extensions (including PTEs) from an online Business Central environment
New function New-BcDatabaseExport to start a new Database Export from an online Business Central environment
New function Get-BcDatabaseExportHistory to get the Database Export History from an online Business Central tenant/environment

2.0.2
Allow no credentials with filesOnly containers
Connect from inside the container to SaaS environment in Install-BcAppFromAppSource and Run-ConnectionTestToBcContainer to avoid file locks
Add parameter allowInstallationOnProduction to Install-BcAppFromAppSource to allow installation in production environments