@@ -3,6 +3,7 @@ Issue #1668 Run-AlValidation fails if app filename has a comma (and there is onl
 Issue #1675 Convert-BcAppsToRuntimePackages doesn't work with only one app.
 Issue #1678 Setup-BcContainerTestUsers fails on version 18
 Issue #1682 add silent mode to import module
+Flush-ContainerHelperCache will also cleanup generic images not matching your OS
 
 2.0.4
 Remove-BcEnvironment fails after waiting for environment removal
